# stochastic-benchmark

./: .gitignore  CITATION.cff  README.md  TESTING.md  pyproject.toml  requirements.txt  run_tests.py  setup.py
.github/: copilot-instructions.md  copilot-setup-steps.yml
.github/workflows/: ci.yml
data/sk/: best_found.txt  gs_energies.txt  gs_energies_dneal.txt  gs_energies_pysa.txt  random_energies.txt
data/wishart/: hyperopt_perf_ratio_100_0.4.pkl  hyperopt_perf_ratio_100_0.5.pkl  hyperopt_perf_ratio_100_0.6.pkl  hyperopt_perf_ratio_100_0.7.pkl  (+17 more)
notebooks/: demo.ipynb  dev.ipynb  setups.py
src/: benchmark_script.py  benchmark_toroidal.py  benchmarking.py  benchmarking_combined.py  benchmarking_pysa.py  benchmarking_temperature.py  benchmarking_temperature100.py  bootstrap.py  comparison.py  cross_validation.py  df_utils.py  do_dneal.py  do_mip.py  do_pysa.py  draw_comparison.py  generate_random_stats.py  generate_results_df.py  generate_stats_df.py  generate_ws_dataframe.py  generate_ws_dataframe_dantzig.py  generate_ws_dataframe_wishart.ipynb  generate_ws_dataframe_wishart.py  instance_42.py  interpolate.py  names.py  plotting.py  random_exploration.py  retrieve_data.py  run_all_plots.py  run_dneal.py  run_pysa.py  sequential_exploration.py  single_instance_plots.py  stats.py  stochastic_benchmark.py  success_metrics.py  training.py  util_benchmark.py  utils_ws.py  windows_sticker.py
tests/: test_bootstrap.py  test_bootstrap.py.backup  test_df_utils.py  test_interpolate.py  test_names.py  test_smoke.py  test_stats.py  test_success_metrics.py  test_training.py
(+7752 files in other folders)
